--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -22,7 +22,7 @@
    <div class="row">
      <div class="column">
      <div class="content">
-     <img class="titlelogo" src="chino-flower.gif">
+     <img class="titlelogo" src="Chino-flower.gif">
      </div>
      </div>
      <div class="column">
