muya name change in the question & chino gif in page

--- a/SorinStudio-html/index.html
+++ b/SorinStudio-html/index.html
@@ -76,7 +76,7 @@
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br>
-    <p><a class="big">➤ MUYA:</a> 作为男士西装领域的工作室，在推广和运营方面，是如何让越来越多的顾客关注到你们的呢？</p>
+    <p><a class="big">➤ 木牙MUYA:</a> 作为男士西装领域的工作室，在推广和运营方面，是如何让越来越多的顾客关注到你们的呢？</p>
     <p class="english">As a men's suits studio, how do you get more and more customers' attention in terms of promotion and operation?</p>
     <p><a class="big">SOARIN STUDIO:</a> 我觉得在未来，所有生意都将死绝，唯有文化生生不息。如果每一个客户都能够被我们的文化和服务感染到。<br>
     在推广逻辑来说，网络更多说的是高速传播， 我们希望把客户的单位改为1，就是最好的推广方式。而运营的方向在于，我们做的这件事有没有改善客户体验。</p>
@@ -84,7 +84,7 @@
     <br>
     <img class="titlelogo" src="sorin13.jpg">
     <br>
-    <p><a class="big">➤ MUYA:</a> 在工作室成立期间经历过哪些挑战吗？or 在事业困难时期是怎么度过的呢？</p>
+    <p><a class="big">➤ 木牙MUYA:</a> 在工作室成立期间经历过哪些挑战吗？or 在事业困难时期是怎么度过的呢？</p>
     <p class="english">Did Soarin studio experience any challenges? Or, What did the studio team do during a difficult period in your career?</p>
     <p><a class="big">SOARIN STUDIO:</a> 创业途中肯定会有很多挑战，例如做了两年淘宝店铺，被迫重新开始。团队产生严重分歧，差点解散公司。工厂严重拖货期，导致几千个客户不及时到货。<br>
     还有工厂做货的严重质量问题，还有资金链差点断裂等等。我们内部经常说，一年一大难，多难兴邦，渡过全靠团队每一个的不放弃。</p>
@@ -94,28 +94,28 @@
     <br>
     <img class="titlelogo" src="sorin14.jpg">
     <br>
-    <p><a class="big">➤ MUYA:</a> 为什么会想独立出来做工作室，是不是想保留自己的独特创意，而不被他人左右？</p>
+    <p><a class="big">➤ 木牙MUYA:</a> 为什么会想独立出来做工作室，是不是想保留自己的独特创意，而不被他人左右？</p>
     <p class="english">Why do you want to start an independent men's suit studio? Does it for keeping your own unique creativity or for not being controlled by others?</p>
     <p><a class="big">SOARIN STUDIO:</a> 对，我们想做能够普及并有意义的产品，因为那些快速出现，不必耗费过多努力的大规模生产出来的服装迅速把这件有意义的产品给淘汰掉，我认为不应这样。</p>
     <p class="english">Yes, we want to make products that are popular and meaningful. I believe meaningful products should not be eliminated by clothing products that emerge quickly and are produced in a large scale without any effort.</p>
     <br>
     <img class="titlelogo" src="sorin15.jpg">
     <br>
-    <p><a class="big">➤ MUYA:</a> 制作了这么多的作品，哪件或者哪个系列是工作室最喜爱的呢？为什么最喜爱这一系列的呢？</p>
+    <p><a class="big">➤ 木牙MUYA:</a> 制作了这么多的作品，哪件或者哪个系列是工作室最喜爱的呢？为什么最喜爱这一系列的呢？</p>
     <p>After so many works created, which one or series is the studio's favorite? Why this series is best favorite?</p>
     <p><a class="big">SOARIN STUDIO:</a> 在澳门拍的那期雅痞的感觉很浓郁，一个穿着西装行走在大街上的痞子，无论从内心，与外表，都能完美结合的它</p>
     <p class="english"> The series in Macau has a strong feeling of the yuppie. A man ruffianly walking on the street in a suit, which can be perfectly combined with both inner and appearance.</p>
     <br>
     <img class="titlelogo" src="sorin16.jpg">
     <br>
-    <p><a class="big">➤ MUYA:</a> 如何选材，对于作品的用料？当作品idea和所需要的材料无法达到想象中的程度时，工作室会如何做出取舍？或者说是把哪一方面放在第一位呢？</p>
+    <p><a class="big">➤ 木牙MUYA:</a> 如何选材，对于作品的用料？当作品idea和所需要的材料无法达到想象中的程度时，工作室会如何做出取舍？或者说是把哪一方面放在第一位呢？</p>
     <p class="english">How did the studio apply materials?  How will the studio make a choice when the idea of the work and the required materials cannot reach the psychological criteria? Or which comes first?</p>
     <p><a class="big">SOARIN STUDIO:</a> 另辟途径，达到设计上想要的效果，一次不行两次，两次不行三次，事在人为。</p>
     <p class="english">Find another way to achieve the desired effect in the design. Once failed then twice, twice failed then thrice. It all depends on effort.</p>
     <br>
     <img class="titlelogo" src="sorin17.jpg">
     <br>
-    <p><a class="big">➤ MUYA:</a> 在服装设计和制作的过程中，如何将服饰设计风格与所对应的受众顾客相结合？</p>
+    <p><a class="big">➤ 木牙MUYA:</a> 在服装设计和制作的过程中，如何将服饰设计风格与所对应的受众顾客相结合？</p>
     <p class="english">During the processing of design and produce, How to combine the fashion design style with the customers?</p>
     <p><a class="big">SOARIN STUDIO:</a>摄取我们需要的元素，结合现代人的穿衣习惯做出改变，创新，针对不同年龄阶段，做出不同的需求设计。例如咖啡师，尽量选择色调相对较暗的，
     由于咖啡渍的因素。</p>
