chino name update 02

--- a/ChinoAmobi-html/index.html
+++ b/ChinoAmobi-html/index.html
@@ -108,7 +108,7 @@
     <p class="english">  I have tried to be as excited about what they love as they are and my attempt has been to encourage them to refine these passions in eloquent, unexpected, and sublime ways, and to build trust. </p>
     <br>
     <br>
-    <img class="titlelogo" src="chino-flower.gif">
+    <img class="titlelogo" src="Chino-flower.gif">
     <br>
     <div class="information">
     <p><a class="big">艺术家品牌及个人联系方式</a></p>
@@ -117,7 +117,7 @@
     <p class="english"> <a class="link" href="https://www.instagram.com/eroica__/">✤ 品牌INS:eroica_</a></p>
     <p class="english"> <a class="link" href="https://www.instagram.com/chinoamobi/">✤ 个人INS:chinoamobi</a></p>
     <br>
-    <img class="titlelogo" src="Chino-final.jpg">
+    <img class="titlelogo" src="chino-final.jpg">
   </div>
   <br><br>
      <p class="big">木牙微信订阅号</p>
