about page update

--- a/about.html
+++ b/about.html
@@ -30,11 +30,14 @@
    <br>
    <div class="container">
      <br>
-     <p class="big">✤ 工作室理念 ✤</p>
-     <p class="text">// 我们是新一代热爱艺术和设计的一批尖尖角，<br>
-     希望这里可以是激发你灵感嫩芽的肥沃土壤 //</p>
+     <p class="big">✤ 平台理念 ✤</p>
+     <p class="text">BE THE ONE<br>
+     没什么, 比年轻, 更为独特</p>
      <p>木牙，木上枝丫儿，是小小树木中的鲜嫩枝丫；或是葱葱绿树下生机勃勃的绿叶；亦或是百年古树的固有强壮枝干。<br>
-     MUYA（Make Unique，Young Arts），彰显着独立艺术的文化魅力，和年轻创作的生机气息。艺术是对人类感性的不断探知，也是对理性的不断延伸。我们尊重个体的感性，群体的力量。呼吁个体的感性魅力得以充分发挥，促进群体的力量不断壮大。</p>
+     MUYA（Make Unique，Young Arts），彰显着独立艺术的文化魅力，和年轻创作的生机气息。艺术是对人类感性的不断探知，也是对理性的不断延伸。我们尊重个体的感性，群体的力量。呼吁个体的感性魅力得以充分发挥，促进群体的力量不断壮大。<br>木牙MUYA成立于2020年，致力于探索感性文化的各个方面。木牙MUYA平台专注于访谈的展示方式，访谈既是一种记录也是当下思想的碰撞。作为当下年轻的我们让我们走出舒适圈，打破次元壁，以基础知识为积淀创造新的思想。我们诚邀从事包括当代艺术，设计，插画，工艺，街头艺术，动画，新材料，新媒体,  策展人，工作室合伙人，创作家，影视，文字，音乐等杰出新星们和前辈，以解决问题，可发展方向，强调新颖，非常规的创造力为主要思想进行创意对话。</p>
+     <p class="english">MUYA was founded in 2020 and is committed to exploring all aspects of perceptual culture. Includes contemporary art, design, illustration, craft, street art, animation, new materials, media and more. MUYA invites artists, curators, studio partners and creators from around the world to engage in a dialogue. To solve the problem, development direction, emphasis on new, unconventional creativity as the main ideas.<br>
+     MUYA is a platform based on the internet for art talks and art sharing. The aim is to find out the possibilities between art and commercial in the form of dialogue. We are committed to providing inspiration to contemporary students who love art and design. The channel of commercial design links and developmental directions enable everyone to communicate with artists and designers beyond the campus. Pride in spreading ideas, perspectives, solutions, and artistic resources. At the same time, we promote different artistic concepts and ideas rather than criticize or explain them.<br>
+     In this art society which is filled with questions/puzzles and overloaded ideas, MUYA focuses on the issues that we care about most and the words that need to be addressed are entitled goals. Interact with influential, active and diverse art stars, and outstanding designers to answer questions. Art is an endless human exploration for the unknown. Our purpose is to provide support for the continuous flow of design and art explorers and groups through innovative ideas, humorous questions, unexpected answers, and rich experience, practical application and promotion of art. To respond to the group with the sound of the individual, and to respond to the individual with the quantity of the group.</p>
      <br><br>
      <p class="big">✤ 关于我们 | About us ✤</p>
      <P>木牙MUYA成立于2020年，致力于探索感性文化的各个方面。包括当代艺术，设计，插画，工艺，街头艺术，动画，新材料，媒体等。木牙诚邀来自世界各地的艺术从业者，策展人，工作室合伙人和创作家进行对话。以解决问题，可发展方向，强调新颖，非常规的创造力为主要思想。</p>
@@ -48,6 +51,15 @@
      <br><br>
      <p class="big">木牙微信订阅号</p>
      <img class="code" src="muya-qr.jpg">
+     <p class="big">✤ OPEN CALL ✤</p>
+     <p>“天青色等烟雨，而我在等你。”<br>
+     如果有意愿，可以联系我们，期待倾听您的创作经历和有趣的故事。
+     </p>
+     <p class="english">We're collecting and listening to artists who want to share their story!<br>
+     It is our privilege to share with some of the most exciting contemporary artists, designers, and creatives an insight into their methods and processes to share them with those who need them as well. <br>
+     If you feel interested, you can email and contact us. We appreciate your supporting and participation.<br>
+     Feel free to email us: muya.art@gmail.com
+     </p>
   </div>
   </body>
 
