about page email information update

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
      <p class="english">We're collecting and listening to artists who want to share their story!<br>
      It is our privilege to share with some of the most exciting contemporary artists, designers, and creatives an insight into their methods and processes to share them with those who need them as well. <br>
      If you feel interested, you can email and contact us. We appreciate your supporting and participation.</p>
-     <p>Feel free to email us: muya.art@gmail.com</p>
+     <p>Feel free to email us your concept and CV or just say Hi: muya.art@gmail.com</p>
   </div>
   </body>
 
