--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
   </div>
   <div class="column">
     <div class="content">
+      <a href="xuewu-html/index.html">
     <img src="xuewu-motion.gif" style="width:100%">
       <h3>郑学武 ZHENG XUEWU</h3>
       <p>职业艺术家/国际艺术策展人
        出生于黑龙江农垦建设兵团，先后修学业于哈尔滨师范大学艺术学院美术系、中央工艺美术学院装饰绘画系、纽约州立大学美术学院版画系。美国阿巴拉契亚州立大学、美国北卡罗来纳大学的客座教授;美国哥伦比亚大学、帕森斯学院、瓦萨学院及爱尔兰科克大学的访问学者。美国弗蒙特艺术中心、比利时马瑟瑞尔艺术中心和韩国光州市立美术馆的国际驻访项目艺术家。版画和装置作品参加过亚洲、欧洲、澳大利亚和美国的众多展览。重要收藏：中国美术馆、德国科勒惠支博物馆、韩国光州市立美术馆、美国阿克兰博物馆、澳大利亚驻华大使馆等。▷▷▷▷
-     </p>
+     </p></a>
     </div>
   </div>
   <div class="column">
