--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
   </div>
   <div class="column">
     <div class="content">
+    <a href="eric-html/index.html">
     <img src="Eric-motion.gif" style="width:100%">
       <h3>ERIC MILLIKIN</h3>
-      <p>Eric Millikin是一个概念激进主义新媒体艺术家在底特律，密歇根州和里士满，弗吉尼亚州。Millikin是密歇根州立大学的第一代大学生，曾获得多项学术奖学金，包括国家优秀学生奖学金，目前他是弗吉尼亚联邦大学动态影像专业研究生在读学生。他最近在一年的时间里在20个场馆展出，他的作品在底特律、丹佛、迪拜、旧金山、苏格兰和韩国的博物馆和画廊展出。Millikin之前的工作为他带来了广泛的经验，包括作为人体解剖实验室技术员，戏剧音响和灯光设计师，工业音乐家，普利策奖获奖艺术家和艺术总监， 受害者的后裔。他的作品被《连线》、《今日美国》、《雷普利的信不信由你》等杂志登载。以及《纽约时报》周日艺术版块。▷▷▷▷</p>
+      <p>Eric Millikin是一个概念激进主义新媒体艺术家在底特律，密歇根州和里士满，弗吉尼亚州。Millikin是密歇根州立大学的第一代大学生，曾获得多项学术奖学金，包括国家优秀学生奖学金，目前他是弗吉尼亚联邦大学动态影像专业研究生在读学生。他最近在一年的时间里在20个场馆展出，他的作品在底特律、丹佛、迪拜、旧金山、苏格兰和韩国的博物馆和画廊展出。Millikin之前的工作为他带来了广泛的经验，包括作为人体解剖实验室技术员，戏剧音响和灯光设计师，工业音乐家，普利策奖获奖艺术家和艺术总监， 受害者的后裔。他的作品被《连线》、《今日美国》、《雷普利的信不信由你》等杂志登载。以及《纽约时报》周日艺术版块。▷▷▷▷</p></a>
     </div>
     </div>
    </div>
