english part words size

--- a/SorinStudio-html/index.html
+++ b/SorinStudio-html/index.html
@@ -110,7 +110,7 @@
     <img class="titlelogo" src="sorin15.jpg">
     <br>
     <p><a class="big">➤ 木牙MUYA:</a> 制作了这么多的作品，哪件或者哪个系列是工作室最喜爱的呢？为什么最喜爱这一系列的呢？</p>
-    <p>After so many works created, which one or series is the studio's favorite? Why this series is best favorite?</p>
+    <p class="english">After so many works created, which one or series is the studio's favorite? Why this series is best favorite?</p>
     <p><a class="big">SOARIN STUDIO:</a> 在澳门拍的那期雅痞的感觉很浓郁，一个穿着西装行走在大街上的痞子，无论从内心，与外表，都能完美结合的它</p>
     <p class="english"> The series in Macau has a strong feeling of the yuppie. A man ruffianly walking on the street in a suit, which can be perfectly combined with both inner and appearance.</p>
     <br>
