Shiyouzhong-html update

--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
     </div>
     </div>
    </div>
+   <div class="row">
+     <div class="column">
+       <div class="content">
+         <a href="shiyouzhong-html/index.html">
+         <img src="shiyouzhong-cover.gif" style="width:100%">
+         <h3>施又中 SHI YOUZHONG</h3>
+         <p>施又中，1972 年出生于台湾,毕业于中国文化大学戏剧学系。现专职艺术创作,绘画资历超过 10 年,以西画压克力彩及水彩为主要创作媒材。
+         曾参加多次台湾之联展及个展,作品亦受邀至美国纽约、韩 国、南美洲、东欧、中东地区展出。▷▷▷▷</p></a>
+       </div>
+     </div>
+
+
+
+      </div>
 
 
 
