--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -43,6 +43,11 @@
      <img class="titlelogo" src="xuewu-huayu.gif">
      </div>
      </div>
+     <div class="column">
+     <div class="content">
+     <img class="titlelogo" src="shiyouzhong-flower.gif">
+     </div>
+     </div>
   </div>
      <br><br><br><br><br>
      <p class="container">▽</p>
