--- a/shiyouzhong-html/index.html
+++ b/shiyouzhong-html/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>郑又中</title>
+  <title>施又中</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../style-project.css">
@@ -25,7 +25,7 @@
    <hr>
    <div class="container">
      <br>
-     <p class="title_big">明暗之间看见色彩 | 郑学武</p>
+     <p class="title_big">明暗之间看见色彩 | 施又中</p>
      <img class="titlelogo" src="shiyouzhong01.jpg">
      <br>
      <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索那被我们遗忘的日常！</p>
