about us + all of english translation finish

--- a/ChinoAmobi-html/index.html
+++ b/ChinoAmobi-html/index.html
@@ -32,6 +32,8 @@
      <br><br>
      <P>随着当代艺术的发展，越来越多的艺术形式也随之出现，多媒体艺术就是其中一种。多媒体艺术是以数码技术为基点，兼容摄影、录像、视频、声音、装置、互动等综合手段进行创作的“多媒体艺术”，多重感受的形式吸引了大家的目光。</p>
      <p>作为一位多媒体艺术家，Chino Amobi在音乐，绘画，平面设计，写作和视频上的成就是巨大的。在被他的作品吸引的同时，他对于不同类别的跨界尝试的勇气和热情也同样吸引了我们。我们有幸邀请到了Chino Amobi 来到木牙MUYA。和大家一起倾听他对于不同媒介的想法和感悟，对于作品思想的讲解。</p>
+     <p class="english">With the development of contemporary art, more and more art forms appear, multimedia art is one of them. Multimedia art is based on digital technology, compatible with photography, video, video, sound, installation, interaction and other comprehensive means of creation of "multimedia art", the form of multiple feelings attracted everyone's attention.</p>
+     <p class="english">As a multimedia artist, Chino Amobi's achievements in music, painting, graphic design, writing and video are immense. While being attracted by his works, we are also attracted by his courage and enthusiasm for trying to cross the boundary of different categories. We are honored to have Chino Amobi at MUYA. Listen to his thoughts and feelings on different media and explain the ideas of his works.</p>
      <br><br>
      <img class="titlelogo" src="chino-head.gif">
      <br><br>
