--- a/SorinStudio-html/index.html
+++ b/SorinStudio-html/index.html
@@ -34,9 +34,13 @@
      这，就是SOARIN。”</p>
      <p class="english">"Retro is a kind of mark, constantly reappearing, but forgets the essence of retro: discontent with reality.The future recast from the past and the present. Restoring ancient ways, remolding from the old times and the new century.Break the old ways with the old ways.To discover, to deny, to reconstruct.The accumulation of history is profound in restoring ancient ways, and the creation of the future is bursting out in restoring ancient ways.So that's SOARIN."</p>
      <p>人的生命最可贵之处是我与別人不同,要找寻自己的人生之路,勇敢活出自我。所谓的活出自我是应该关注于/忠于自己的内心，得到心的安静，明白自己要的什么，追求的是什么。</p>
+     <p class="english">The most valuable thing about human life is that I am different from others, so I have to find my own way and live my own life bravely. The so-called living self is to focus on/be loyal to your heart, get the peace of mind, know what you want and what you are pursuing.</p>
      <p> 这就像是我们这一代的年轻人，无论是思想还是衣着，都得到了进一步的的解放。开始自主接受新的事物。雅皮士风貌(yuppie look)兴起于20世纪80年代。而随着中国的近一步发展，21世纪的中国出现了一个新的词汇「Chuppie」。（Chinese & Yuppie）而这种风格更多表现在了服装上。</p>
+     <p class="english">It is as if the young people of our generation have been further liberated, both in thought and in dress. Start accepting new things on your own. The Yuppie look began in the 1980s. With the further development of China, a new word "Chuppie" appeared in 21st century China. (Chinese & Yuppie) And this style is more reflected in the clothing.</p>
      <p>但是所谓的「Chuppie」没有一个固定的模式，不会刻意追求奢华和所谓的潮流。而是把这种追求投注到了品质上，对于衣服材质，剪裁，搭配更为看重。随着时间和潮流的趋势，对于服饰舒适程度的不断提高，上衣的剪裁和裤腿也出现了各种不同的风格。</p>
-     <p> 怀着对于材料品质的执着和雅痞风格男装的好奇，我们有幸邀请到了SOARIN工作室来到木牙MUYA，来倾听他们对于独立品牌，风格服饰与个性生活的态度，以及他们是如何平衡设计与商业。</p>
+     <p class="english">But the Chuppie does not have a fixed pattern and does not deliberately pursue luxury and so-called fashion. But this pursuit is invested in the quality of the clothes, the material, cut, collocation is more important. With the development of time and trend, various styles of tailoring and trouser legs have emerged with the continuous improvement of clothing comfort.</p>
+     <p>怀着对于材料品质的执着和雅痞风格男装的好奇，我们有幸邀请到了SOARIN工作室来到木牙MUYA，来倾听他们对于独立品牌，风格服饰与个性生活的态度，以及他们是如何平衡设计与商业。</p>
+     <p class="english">With a commitment to material quality and a curiosity for yuppie style men's wear, we were fortunate to have SOARIN studio at MUYA to hear their attitude towards independent brands, style clothing and personal life, and how they balance design and business.</p>
      <br><br>
      <img class="titlelogo" src="sorin01.jpg">
      <p> SOARIN工作室专注的西装风格有商务（Business），休闲（Leisure），工装（Work Wear），猎装（Hunting），阿美咔叽（Amekaji），格纹（Check），条纹（stripe）</p>
