--- a/eric-html/index.html
+++ b/eric-html/index.html
@@ -30,8 +30,10 @@
      <br>
      <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索概念型激进主义！</p>
      <br><br>
-     <P>当现实生活中无法实现的事物不断出现堆积，AI/VR/AR被作为创造者的我们开发了出来。那些生活中无法实现的梦想和奇思妙想才有了新的出口。艺术的发展也因为AI/VR/AR的出现变的更加的新颖。例如，工业设计，建筑设计，服装（商业、设计），游戏，沉浸式表演...	等。<br>
-     AI/VR/AR技术的出现让观众有了更多和艺术互动的可能，增加了许多感官享受。也让更多的人愿意了解艺术。对于艺术家而言也让作品得到了更多被了解的机会。今天我们非常幸运的邀请到概念新媒体艺术家Eric Millikin来到木牙MUYA。和大家一起倾听他对于AI/VR/AR在他的作品中起到的作用，他又如何应用的？对于想要入门的我们又能做些什么。</p>
+     <P>当现实生活中无法实现的事物不断出现堆积，AI/VR/AR被作为创造者的我们开发了出来。那些生活中无法实现的梦想和奇思妙想才有了新的出口。艺术的发展也因为AI/VR/AR的出现变的更加的新颖。例如，工业设计，建筑设计，服装（商业、设计），游戏，沉浸式表演...	等。</p>
+    <p class="english">AI/VR/AR has been developed by us as creators as things that can't be achieved in real life continue to pile up. A new outlet for dreams and ideas that life has never been able to achieve. The development of art is also more novel due to the appearance of AI/VR/AR. For example, industrial design, architectural design, clothing (commercial, design), games, immersive performances... And so on.</p>
+     <p>AI/VR/AR技术的出现让观众有了更多和艺术互动的可能，增加了许多感官享受。也让更多的人愿意了解艺术。对于艺术家而言也让作品得到了更多被了解的机会。今天我们非常幸运的邀请到概念新媒体艺术家Eric Millikin来到木牙MUYA。和大家一起倾听他对于AI/VR/AR在他的作品中起到的作用，他又如何应用的？对于想要入门的我们又能做些什么。</p>
+     <p class="english">The appearance of AI/VR/AR technology makes it possible for the audience to interact with art more, and increases many sensory enjoyment. It also makes more people willing to learn about art. For artists, it also gives them more opportunities to be known about their works. Today we are very lucky to have concept new media artist Eric Millikin in MUYA. Let's listen to his role of AI/VR/AR in his works, and how does he apply it? What can we do for those who want to get started?</p>
      <br><br>
      <img class="titlelogo" src="eric02.jpg">
      <br>
