--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </div>
    <hr><br>
    <div>
-   <img class="titlelogo" src="logo-motion.gif">
+   <img class="titlelogo" src="MUYA logo-19.jpg">
    </div>
    <br>
 <div class="row">
