--- a/shiyouzhong-html/index.html
+++ b/shiyouzhong-html/index.html
@@ -31,7 +31,9 @@
      <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索那被我们遗忘的日常！</p>
      <br><br>
      <P>“生活中从不缺少美，而是缺少发现美的眼睛。” 这是我们经常听到和看到的一句话。在城市中长期工作的我们，适应了快餐式文化拥有了欣赏时尚服饰和皮包的眼睛，却在不知不觉中遗失了发现自然之美的眼睛。自然与人一直是相辅相成的关系，在我们无法释怀和忧郁乏闷时，会下意识的看向窗外，让意识流动起来，从而放松。</p>
+     <p class="english">"Life is never short of beauty, but short of eyes to find it." This is a phrase we often hear and see. Having worked in the city for a long time, we have adapted to the fast food culture and have the eyes to appreciate fashionable clothes and leather bags, but we have lost the eyes to find the beauty of nature unconsciously. Nature and human beings have always been mutually reinforcing. When we can't let go and feel depressed, we subconsciously look out the window to let our consciousness flow and relax.</p>
      <p>不管是看着天空，身处树林，乘船垂钓，倾听鸟鸣，策马扬鞭，还是演奏琴曲.....我们都需要找到心中的那片宁静，然后才能回看初心，思考未来。而今天来到木牙MUYA做客的画家施又中，把她心中的这片宁静分享给大家～让我们来一起跟随她的眼睛来欣赏这别样的美景和倾听她对于作画独特的见解吧！</p>
+     <p class="english">Whether it's looking at the sky, being in the woods, taking a boat to fish, listening to birds, riding horses to whip, or playing music... We all need to find that peace of mind before we can go back to our original mind and think about the future. Today, the painter Shi Youzhong comes to MUYA to share the peace in her heart. Let's follow her eyes to enjoy the beautiful scenery and listen to her unique views on painting.</p>
      <br><br>
      <img class="titlelogo" src="shiyouzhong02.jpg">
      <br>
