--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -43,12 +43,19 @@
      <img class="titlelogo" src="xuewu-huayu.gif">
      </div>
      </div>
+     <div class="row">
+     <div class="column">
+     <div class="content">
+     <img class="titlelogo" src="eric-huayu.gif">
+     </div>
+     </div>
      <div class="column">
      <div class="content">
      <img class="titlelogo" src="shiyouzhong-flower.gif">
      </div>
      </div>
   </div>
+
      <br><br><br><br><br>
      <p class="container">▽</p>
      <p class="container">▽</p>
