--- a/xuewu-html/index.html
+++ b/xuewu-html/index.html
@@ -31,7 +31,9 @@
      <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索艺术家的禅修！</p>
      <br><br>
      <P>在时代不断发展的过程中，文化传播和对外输出成了必不可少的一环。禅修也是被广为传播的文化之一。禅修在印度语里的意思是“心灵的培育”，顾名思义就是把心灵中美好的状态培育出来。而当禅修进入艺术又能得到怎么样的化学反应呢？</p>
+     <p class="english">In the process of constant development of The Times, cultural communication and export has become an indispensable link. Meditation is also one of the most widely disseminated cultures. Meditation means "cultivation of the mind" in Hindi, as the name implies, the cultivation of a good state of mind. And what kind of chemistry does meditation get when it comes to art?</p>
      <p>艺术家通过不断的禅修和冥想脱离困扰和诱惑，用自己的艺术作品展示自己对人类，社会，环境，乃至整个世界的理解，从而达到追求自身的效果。今天我们有幸邀请到艺术家/国际艺术策展人，郑学武老师来带领我们走进他的艺术禅修的世界。</p>
+     <p class="english">Through constant meditation and meditation, artists get rid of troubles and temptations, and show their understanding of human beings, society, environment and even the whole world with their artistic works, so as to achieve the effect of pursuing themselves. Today we are honored to have an artist/international art curator, Zheng Xuewu, to lead us into the world of his art meditation.</p>
      <br><br>
      <img class="titlelogo" src="xuewu01.jpg">
      <br>
