--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@
 
     gtag('config', 'G-P2726CSWT4');
   </script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="webicon.png">
  </head>
 
@@ -34,43 +35,49 @@
      <p class="text">BE THE ONE</p>
      <p class="text">没什么, 比年轻, 更为独特</p>
      <p class="text">“Sensibility, Interview, Young, Unique & Original”</p>
-     <p>木牙，木上枝丫儿，是小小树木中的鲜嫩枝丫；或是葱葱绿树下生机勃勃的绿叶；亦或是百年古树的固有强壮枝干。<br><br>
-     MUYA（Make Unique，Young Arts），彰显着独立艺术的文化魅力，和年轻创作的生机气息。艺术是对人类感性的不断探知，也是对理性的不断延伸。我们尊重个体的感性，群体的力量。呼吁个体的感性魅力得以充分发挥，促进群体的力量不断壮大。<br>木牙MUYA成立于2020年，致力于探索感性文化的各个方面。木牙MUYA平台专注于访谈的展示方式，访谈既是一种记录也是当下思想的碰撞。作为当下年轻的我们让我们走出舒适圈，打破次元壁，以基础知识为积淀创造新的思想。我们诚邀从事包括当代艺术，设计，插画，工艺，街头艺术，动画，新材料，新媒体,  策展人，工作室合伙人，创作家，影视，文字，音乐等杰出新星们和前辈，以解决问题，可发展方向，强调新颖，非常规的创造力为主要思想进行创意对话。</p>
-     <p class="english">MUYA was founded in 2020 and is committed to exploring all aspects of perceptual culture. Includes contemporary art, design, illustration, craft, street art, animation, new materials, media and more. MUYA invites artists, curators, studio partners and creators from around the world to engage in a dialogue. To solve the problem, development direction, emphasis on new, unconventional creativity as the main ideas.<br>
-     MUYA is a platform based on the internet for art talks and art sharing. The aim is to find out the possibilities between art and commercial in the form of dialogue. We are committed to providing inspiration to contemporary students who love art and design. The channel of commercial design links and developmental directions enable everyone to communicate with artists and designers beyond the campus. Pride in spreading ideas, perspectives, solutions, and artistic resources. At the same time, we promote different artistic concepts and ideas rather than criticize or explain them.<br>
-     In this art society which is filled with questions/puzzles and overloaded ideas, MUYA focuses on the issues that we care about most and the words that need to be addressed are entitled goals. Interact with influential, active and diverse art stars, and outstanding designers to answer questions. Art is an endless human exploration for the unknown. Our purpose is to provide support for the continuous flow of design and art explorers and groups through innovative ideas, humorous questions, unexpected answers, and rich experience, practical application and promotion of art. To respond to the group with the sound of the individual, and to respond to the individual with the quantity of the group.</p>
+     <p class="chinese">木牙，木上枝丫儿，是小小树木中的鲜嫩枝丫；或是葱葱绿树下生机勃勃的绿叶；亦或是百年古树的固有强壮枝干。<br><br>
+     MUYA（Make Unique，Young Arts），彰显着独立艺术的文化魅力，和年轻创作的生机气息。艺术是对人类感性的不断探知，也是对理性的不断延伸。我们尊重个体的感性，群体的力量。呼吁个体的感性魅力得以充分发挥，促进群体的力量不断壮大。</p>
+     <p class="chinese">木牙MUYA成立于2020年，致力于探索感性文化的各个方面。木牙MUYA平台专注于访谈的展示方式，访谈既是一种记录也是当下思想的碰撞。作为当下年轻的我们让我们走出舒适圈，打破次元壁，以基础知识为积淀创造新的思想。我们诚邀从事包括当代艺术，设计，插画，工艺，街头艺术，动画，新材料，新媒体,  策展人，工作室合伙人，创作家，影视，文字，音乐等杰出新星们和前辈，以解决问题，可发展方向，强调新颖，非常规的创造力为主要思想进行创意对话。</p>
+     <p class="english">⽊⽛（the newborn branches of tree) is the fresh leaves from the little trees, or is the living green leaves under a green tree, or is the inherently strong branches of a centuries-old tree.</p>
+     <p class="english">MUYA (Make Unique, YoungArts) shows the cultural charm of independent art and the vitality of Young creation. Art is the continuous exploration of human sensibility, but also is the continuous extension of reason. We respect the sensibility of the individual, the strength of the group. Our platform allows the individual's charisma to be fully utilized, and the individual's strength allows the group's strength to grow continuously.</p>
+     <p class="english">MUYA was founded in 2020 and is committed to exploring all aspects of perceptual culture. MUYA platform focuses on the presentation of interviews, either a word documentary or a collision of current thoughts. Young people nowadays, we get out of our
+    comfort zone and break down dimensional walls to create many new ideas based on
+    basic knowledge. We sincerely invite those who work in contemporary art, design,
+    illustration, craft, street art, animation, new materials, new media, curators, studio
+    partners, creators, film and television, writing, music, and other outstanding new stars and predecessors to do creative dialogues.</p>
      <br><br>
      <p class="big">✤ 关于我们 | About us ✤</p>
-     <P>木牙MUYA成立于2020年，致力于探索感性文化的各个方面。包括当代艺术，设计，插画，工艺，街头艺术，动画，新材料，媒体等。木牙诚邀来自世界各地的艺术从业者，策展人，工作室合伙人和创作家进行对话。以解决问题，可发展方向，强调新颖，非常规的创造力为主要思想。</p>
+     <p class="chinese">木牙MUYA成立于2020年，致力于探索感性文化的各个方面。包括当代艺术，设计，插画，工艺，街头艺术，动画，新材料，媒体等。木牙诚邀来自世界各地的艺术从业者，策展人，工作室合伙人和创作家进行对话。以解决问题，可发展方向，强调新颖，非常规的创造力为主要思想。</p>
      <p class="english">MUYA was founded in 2020 and is committed to exploring all aspects of perceptual culture. Includes contemporary art, design, illustration, craft, street art, animation, new materials, media and more. MUYA invites artists, curators, studio partners and creators from around the world to engage in a dialogue. To solve the problem, development direction, emphasis on new, unconventional creativity as the main ideas.</p>
+
      <br><br>
      <p class="big">✤ 定位和宗旨 ✤</p>
-     <p>木牙MUYA是互联网国际艺术会谈平台也是分享性平台。旨在以对话的形式来和大家一起寻找艺术和商业之间的可能性。我们致力于为当代热爱艺术和设计的学生提供灵感启发，商业设计链接的渠道和可发展的方向使每个人都可以与艺术家交流。以传播不同思想，角度，方案，艺术资源而感到自豪。同时宣传不同的艺术理念和思想，而不是批评或解释。</p>
-     <p>在这个充满疑问，思想超载的艺术社会中，木牙MUYA专注于围绕我们最关心的问题，最需要解决的话题为目标。以交流互动的方式联合具有影响力，积极，多样化的艺术新星和前辈来答疑解惑。艺术是人类对未知领域无穷的人文探索，我们的目的是通过创新的思想，幽默的问题，出乎意料的回答，以及丰富的经验，艺术实际应用和推广，为源源不断的设计和艺术探索者及群体提供助力。以个体之声响应群体，以群体之量回应个体。</p>
+     <p class="chinese">木牙MUYA是互联网国际艺术会谈平台也是分享性平台。旨在以对话的形式来和大家一起寻找艺术和商业之间的可能性。我们致力于为当代热爱艺术和设计的学生提供灵感启发，商业设计链接的渠道和可发展的方向使每个人都可以与艺术家交流。以传播不同思想，角度，方案，艺术资源而感到自豪。同时宣传不同的艺术理念和思想，而不是批评或解释。</p>
+     <p class="chinese">在这个充满疑问，思想超载的艺术社会中，木牙MUYA专注于围绕我们最关心的问题，最需要解决的话题为目标。以交流互动的方式联合具有影响力，积极，多样化的艺术新星和前辈来答疑解惑。艺术是人类对未知领域无穷的人文探索，我们的目的是通过创新的思想，幽默的问题，出乎意料的回答，以及丰富的经验，艺术实际应用和推广，为源源不断的设计和艺术探索者及群体提供助力。以个体之声响应群体，以群体之量回应个体。</p>
      <p class="english">MUYA is a platform based on the internet for art talks and art sharing. The aim is to find out the possibilities between art and commercial in the form of dialogue. We are committed to providing inspiration to contemporary students who love art and design. The channel of commercial design links and developmental directions enable everyone to communicate with artists and designers beyond the campus. Pride in spreading ideas, perspectives, solutions, and artistic resources. At the same time, we promote different artistic concepts and ideas rather than criticize or explain them.</p>
      <p class="english">In this art society which is filled with questions/puzzles and overloaded ideas, MUYA focuses on the issues that we care about most and the words that need to be addressed are entitled goals. Interact with influential, active and diverse art stars, and outstanding designers to answer questions. Art is an endless human exploration for the unknown. Our purpose is to provide support for the continuous flow of design and art explorers and groups through innovative ideas, humorous questions, unexpected answers, and rich experience, practical application and promotion of art. To respond to the group with the sound of the individual, and to respond to the individual with the quantity of the group.</p>
      <br><br>
      <p class="big">✤ 平台创办人信息 ✤</p>
-     <p><a href="https://beiya0916.wixsite.com/beiyayang">杨蓓雅 Beiya Yang</a><br><br>
+     <p class="chinese"><a href="https://beiya0916.wixsite.com/beiyayang">杨蓓雅 Beiya Yang</a><br><br>
      杨蓓雅主要研究常见的事物。她喜欢观察生活，并把这个习惯融入了她的作品中。在弗吉尼亚联邦大学(Virginia Commonwealth University)攻读工艺和材料专业的本科学位后，她去了纽约州立大学-新帕尔兹分校（State University of New York）继续从事于金属项目的研究。<br><br>
      最近，她专注于诠释无处不在的水洗标语言。通过提取物体的内容，她创造了新的标签来表达个人对日常生活和仪式的思考。通过这样的表达方式，作品揭示了标签的内在语言，在制作过程中她邀请佩戴者考虑自身的特性、习惯和需求。<br><br>
      杨蓓雅目前就读于纽约州立大学-新帕尔兹分校，在Myra Mimlitsch-Gray和 Lynn Batchelder指导下攻读金属专业的研究生学位。作品曾在北京国际设计周，纽约珠宝周，西班牙马德里艺术珠宝周，法国慕尼黑珠宝周，法国珠宝周，雅典珠宝周，德国珠宝周，Anderson 画廊，费城国家自由博物馆，等展出。</p>
      <p class="english">Beiya Yang examines common objects. She likes to observe life, and she has brought this habit into her works. After finishing, an undergraduate degree in Craft and materials study at Virginia Commonwealth University. She went to the State University of New York -New Platz to continue her metal research project. <br><br>
     More recently, she has focused on specifically interpreting the language of ubiquitous clothing labels. By extracting their contents, she creates new labels to express personal reflections on everyday routines and rituals. As jewelry, the tags’ inner language is exposed, inviting the wearer to consider their own contents, habits, and needs. Her works are selected in exhibition at Beijing International Design Week, New York Jewelry Week, Madrid Art Jewelry Week in Spain, Munich Jewelry Week in France, French Jewelry Week, Athens Jewelry Week, German Jewelry Week, Anderson Gallery, Philadelphia National Liberty  Museum, etc.
     Beiya Yang is currently completing her graduate degree in metal.</p>
-    <p><a href="http://machine-art-girl.net/">刘禹桐 Yutong Liu</a><br><br>
+    <p class="chinese"><a href="http://machine-art-girl.net/">刘禹桐 Yutong Liu</a><br><br>
     刘禹桐，来自中国的独立平面与视觉设计师，她的作品相关于机械情感共鸣，材料性与非材料性的研究，视觉语言的应用，印刷和数字出版物的探索。她的研究生专业是设计与视觉传达在弗吉尼亚联邦大学艺术学院（2018-2020）。她的本科专业是视觉传达设计在中国鲁迅美术学院（2013-2017)。她的作品被AIGA，ADC，Number：Inc.和时报金犊奖，上海国际印刷周提名，展示和获奖。</p>
     <p class="english">Yutong Liu is an independent graphic and visual designer from China. Her work is based on machine sympathy, research on material and immaterial, visual languages using, exploration on printed and digital publication. Her MFA is Design - Visual Communication at Virginia Commonwealth University School of Fine Arts in USA (2018-2020). Her BFA is Visual Communication Design at Luxun Academy School of Fine Arts in China (2013-2017). Her works are selected or awarded by AIGA, ADC, Number:Inc., and Times Young Creative awards , Shanghai International printing week etc.</p>
     <br><br><br><br>
     <p class="big">木牙微信订阅号</p>
     <img class="code" src="muya-qr.jpg">
     <p class="big">✤ OPEN CALL ✤</p>
-    <p>“Be The One，我们期待那个永远年轻，热情，有趣并且独一无二的你。”</p>
-    <p>如果有意愿，可以联系我们，期待倾听您的创作经历和有趣的故事。</p>
+    <p class="chinese">“Be The One，我们期待那个永远年轻，热情，有趣并且独一无二的你。”</p>
+    <p class="chinese">如果有意愿，可以联系我们，期待倾听您的创作经历和有趣的故事。</p>
     <p class="english">We're collecting and listening to artists who want to share their art practices story!<br>
     It is our privilege to share with some of the most exciting contemporary artists, designers, and creatives an insight into their methods and processes to share them with those who need them as well. <br>
     If you feel interested, you can email and contact us. We appreciate your supporting and participation.</p>
-    <p>✫ Feel free to email us your concept and CV or just say Hi ✫</p> <p>muya.art@gmail.com</p>
+    <p class="english">✫ Feel free to email us your concept and CV or just say Hi ✫</p> <p class="english">muya.art@gmail.com</p>
   </div>
   </body>
 
