--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
       gtag('config', 'G-P2726CSWT4');
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="webicon.png">
  </head>
  <body>
@@ -33,7 +34,7 @@
       <a href="ChinoAmobi-html/index.html">
       <img src="chino-motion.gif" style="width:100%">
       <h3>CHINO AMOBI & EROICA</h3>
-      <p>Chino Amobi 是一名多媒体艺术家，他将艺术、绘画、设计、音乐、写作、丰富电影的风格和声音组合在一起。Chino Amobi是独立唱片公司NON Worldwide的联合创始人，也是EROICA的创意总监。2016年，他发行了EP《Airport Music For Black Folk》，2017年发行了首张专辑《Paradiso》，广受好评。他在VCU获得视觉传达MFA学位。
+      <p class="chinese">Chino Amobi 是一名多媒体艺术家，他将艺术、绘画、设计、音乐、写作、丰富电影的风格和声音组合在一起。Chino Amobi是独立唱片公司NON Worldwide的联合创始人，也是EROICA的创意总监。2016年，他发行了EP《Airport Music For Black Folk》，2017年发行了首张专辑《Paradiso》，广受好评。他在VCU获得视觉传达MFA学位。
       Chino Amobi在VCU也获得了绘画和版画的BFA学位。Chino 在世界各地都有展览，包括纽约新美术馆、洛杉矶当代艺术博物馆、韩国、俄罗斯、法国和巴西。▷▷▷▷</p></a>
     </div>
   </div>
@@ -42,7 +43,7 @@
     <a href="SorinStudio-html/index.html">
     <img src="sorin-motion.gif" style="width:100%">
       <h3>SOARIN STUDIO</h3>
-      <p>复古是一种印记，不断地重现，却忘了复古的本质：是对现实的不满。
+      <p class="chinese">复古是一种印记，不断地重现，却忘了复古的本质：是对现实的不满。
       未来，从过去和现在中重铸。复古，从旧时代和新世纪中重塑。用复古打破复古，
       去发现复古，去否定复古，去重构复古，
       历史的积淀在复古中深刻，未来的创造在复古中迸发，
@@ -54,7 +55,7 @@
       <a href="xuewu-html/index.html">
     <img src="xuewu-motion.gif" style="width:100%">
       <h3>郑学武 ZHENG XUEWU</h3>
-      <p>职业艺术家/国际艺术策展人
+      <p class="chinese">职业艺术家/国际艺术策展人
        出生于黑龙江农垦建设兵团，先后修学业于哈尔滨师范大学艺术学院美术系、中央工艺美术学院装饰绘画系、纽约州立大学美术学院版画系。美国阿巴拉契亚州立大学、美国北卡罗来纳大学的客座教授;美国哥伦比亚大学、帕森斯学院、瓦萨学院及爱尔兰科克大学的访问学者。美国弗蒙特艺术中心、比利时马瑟瑞尔艺术中心和韩国光州市立美术馆的国际驻访项目艺术家。版画和装置作品参加过亚洲、欧洲、澳大利亚和美国的众多展览。重要收藏：中国美术馆、德国科勒惠支博物馆、韩国光州市立美术馆、美国阿克兰博物馆、澳大利亚驻华大使馆等。▷▷▷▷
      </p></a>
     </div>
@@ -64,7 +65,7 @@
     <a href="eric-html/index.html">
     <img src="Eric-motion.gif" style="width:100%">
       <h3>ERIC MILLIKIN</h3>
-      <p>Eric Millikin是一个概念激进主义新媒体艺术家在底特律，密歇根州和里士满，弗吉尼亚州。Millikin是密歇根州立大学的第一代大学生，曾获得多项学术奖学金，包括国家优秀学生奖学金，目前他是弗吉尼亚联邦大学动态影像专业研究生在读学生。他最近在一年的时间里在20个场馆展出，他的作品在底特律、丹佛、迪拜、旧金山、苏格兰和韩国的博物馆和画廊展出。Millikin之前的工作为他带来了广泛的经验，包括作为人体解剖实验室技术员，戏剧音响和灯光设计师，工业音乐家，普利策奖获奖艺术家和艺术总监， 受害者的后裔。他的作品被《连线》、《今日美国》、《雷普利的信不信由你》等杂志登载。以及《纽约时报》周日艺术版块。▷▷▷▷</p></a>
+      <p class="chinese">Eric Millikin是一个概念激进主义新媒体艺术家在底特律，密歇根州和里士满，弗吉尼亚州。Millikin是密歇根州立大学的第一代大学生，曾获得多项学术奖学金，包括国家优秀学生奖学金，目前他是弗吉尼亚联邦大学动态影像专业研究生在读学生。他最近在一年的时间里在20个场馆展出，他的作品在底特律、丹佛、迪拜、旧金山、苏格兰和韩国的博物馆和画廊展出。Millikin之前的工作为他带来了广泛的经验，包括作为人体解剖实验室技术员，戏剧音响和灯光设计师，工业音乐家，普利策奖获奖艺术家和艺术总监， 受害者的后裔。他的作品被《连线》、《今日美国》、《雷普利的信不信由你》等杂志登载。以及《纽约时报》周日艺术版块。▷▷▷▷</p></a>
     </div>
     </div>
    </div>
@@ -74,7 +75,7 @@
          <a href="shiyouzhong-html/index.html">
          <img src="shiyouzhong-cover.gif" style="width:100%">
          <h3>施又中 SHI YOUZHONG</h3>
-         <p>施又中，1972 年出生于台湾,毕业于中国文化大学戏剧学系。现专职艺术创作,绘画资历超过 10 年,以西画压克力彩及水彩为主要创作媒材。
+         <p class="chinese">施又中，1972 年出生于台湾,毕业于中国文化大学戏剧学系。现专职艺术创作,绘画资历超过 10 年,以西画压克力彩及水彩为主要创作媒材。
          曾参加多次台湾之联展及个展,作品亦受邀至美国纽约、韩 国、南美洲、东欧、中东地区展出。▷▷▷▷</p></a>
        </div>
      </div>
