--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -55,6 +55,11 @@
      <img class="titlelogo" src="shiyouzhong-flower.gif">
      </div>
      </div>
+     <div class="column">
+     <div class="content">
+     <img class="titlelogo" src="Zhengluoyu-huayu.gif">
+     </div>
+     </div>
   </div>
 
      <br><br><br><br><br>
