--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
          曾参加多次台湾之联展及个展,作品亦受邀至美国纽约、韩 国、南美洲、东欧、中东地区展出。▷▷▷▷</p></a>
        </div>
      </div>
+     <div class="column">
+       <div class="content">
+         <a href="zhengluoyu-html/index.html">
+         <img src="zhengluoyu-cover.gif" style="width:100%">
+         <h3>❀ 八月特刊 / Special Topic ❀<br> 
+           八月夏天，治愈音符 | 郑洛宇 Zheng Luoyu</h3>
+         <p class="chinese">Hello大家好，我叫郑洛宇
+        出生在音乐家庭，从小受到父亲的耳濡目染，幼儿园就开始接触小提琴，目前擅长钢琴，架子鼓，吉他，唱歌及创作。也是因为接触音乐比较早，从小就有创作的灵感，喜欢写歌。
+        我的写歌没有太大的目的性，就是单纯想用音乐，用唱歌、创作的方式来抒发当下的情绪状态。▷▷▷▷</p></a>
+       </div>
+     </div>
 
 
 
