navigate bar update

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="about.html">关于木牙</a></p>
+   <p><a class="about" href="about.html">关于木牙✻ABOUT</a></p>
    <p><a class="center_page" href="index.html">木牙✻MUYA</a></p>
-   <p><a class="flawer" href="huayuji-html/index.html">花语集</a></p>
-   </div>
-   <hr><br>
+   <p><a class="flawer" href="huayuji-html/index.html">花语集✻GARDEN</a></p>
+   <hr></div>
+   <br>
    <div>
    <img class="titlelogo" src="MUYA logo-19.jpg">
    </div>
@@ -83,7 +83,7 @@
        <div class="content">
          <a href="zhengluoyu-html/index.html">
          <img src="zhengluoyu-cover.gif" style="width:100%">
-         <h3>❀ 八月特刊 / Special Topic ❀<br> 
+         <h3>❀ 八月特刊 / Special Topic ❀<br>
            八月夏天，治愈音符 | 郑洛宇 Zheng Luoyu</h3>
          <p class="chinese">Hello大家好，我叫郑洛宇
         出生在音乐家庭，从小受到父亲的耳濡目染，幼儿园就开始接触小提琴，目前擅长钢琴，架子鼓，吉他，唱歌及创作。也是因为接触音乐比较早，从小就有创作的灵感，喜欢写歌。
