--- a/xuewu-html/index.html
+++ b/xuewu-html/index.html
@@ -19,11 +19,11 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="../about.html">关于木牙</a></p>
+   <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
    <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
-   <p><a class="flawer" href="../huayuji-html/index.html">花语集</a></p>
-   </div>
+   <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
    <hr>
+   </div>
    <div class="container">
      <br>
      <p class="title_big">对话禅修艺术 | 郑学武</p>
