--- a/SorinStudio-html/index.html
+++ b/SorinStudio-html/index.html
@@ -19,9 +19,9 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="../about.html">关于木牙</a></p>
+   <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
    <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
-   <p><a class="flawer" href="../huayuji-html/index.html">花语集</a></p>
+   <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
    <hr>
    <div class="container">
